fixed homepage content size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,11 @@ body {
 
 }
 
+.screenshot-big img {
+    width: 100%;
+    max-width: 720px;
+}
+
 .bs-docs-sidebar .nav>li>a {
     padding: 4px 20px;
     color: gray;
